--- a/src/main/webapp/mainpage.html
+++ b/src/main/webapp/mainpage.html
@@ -4,8 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 引入css样式 -->
   <link rel="stylesheet" href="css/check.css">
+  <link rel="stylesheet" href="css/mainpage.css">  
   <title>Document</title>
+  <style type="text/css">
+  	/*背景图片  */
+    body {
+      background: url("images/001.png") no-repeat;
+      background-size: 100% 140%;
+    }	
+	/* “用户登录”标题  */
+    h2 {
+      color: #94939390;
+      margin-top: 5%;
+    } 
+  </style>
 </head>
 
 <body onload="changeImg()">
@@ -15,15 +29,15 @@
     <h2>用户登录</h2>
     <div id="input_box">
     	<img src="images/user_icon.png" alt="">
-      <input type="text" placeholder="请输入用户名" id="user_id">
+      <input class="inputbox" type="text" placeholder="请输入用户名" id="user_id" oninput="value=value.match(/-?[0-9]*\.?[0-9]*/)">
     </div>
     <div class="input_box">
     	<img src="images/password_icon.png" alt="">
-      <input type="password" placeholder="请输入密码" id="user_password">
+      <input class="inputbox" type="password" placeholder="请输入密码" id="user_password">
     </div>    
-    <div class="input_box">
+    <div  style="vertical-align: top; margin-top: 2%; margin-left: 70px;">
    	 <img src="images/verify_icon.png" alt="">
-    <input type="text"  name="vcode" id="vcode" placeholder="请输入验证码"  onfocus="this.value=''" onblur="if(this.value=='')this.value='请输入验证码'" />
+    <input class="inputbox" type="text"  name="vcode" id="vcode" placeholder="请输入验证码"/>
     <div class="v_code_div" id="vdiv"></div>
                
 	</div>
@@ -36,71 +50,6 @@
   
 </form>
 </body>
-<script>
-        // 获取元素
-        var input = document.querySelector('#vcode');
-        var btn = document.querySelector('#sub');
-        var div = document.querySelector('#vdiv');
-
-        // 搞一个字符库
-        var characters = "QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm1234567890";
-        var str; // str用来储存验证码的文本
-
-        // 生成一个在[l,r]范围内的随机整数的函数
-        function getRandom(l, r) {
-            return parseInt(l + Math.random() * (r - l + 1));
-        }
-
-        // 设置文本不可选中
-        div.addEventListener('selectstart', function (e) {
-            e.preventDefault();
-        })
-
-        // 生成验证码的函数
-        function run() {
-
-            // 先重置str
-            str = '';
-
-            // 删除掉div中的所有子节点
-            while (div.hasChildNodes()) {
-                div.removeChild(div.firstChild);
-            }
-
-            // 生成由四个字符组成的验证码
-            for (var i = 0; i < 4; i++) {
-
-                // 创建一个span对象
-                var span = document.createElement('span');
-
-                // 设置文本（从字库中随机抽取一个字符）
-                span.innerHTML = characters[getRandom(0, characters.length - 1)];
-
-                // 设置一些随机的样式
-                span.style.display = 'inline-block';
-                span.style.fontSize = getRandom(16, 32) + 'px';
-                span.style.color = 'rgb(' + getRandom(0, 200) + ',' + getRandom(0, 200) + ',' + getRandom(0, 200) + ')';
-                span.style.transform = 'translate(' + getRandom(-5, 5) + 'px, ' + getRandom(-5, 5) + 'px) rotate(' + getRandom(-20, 20) + 'deg)';
-                str += span.innerHTML; // str记录字符
-                div.appendChild(span); // 将span添加到div中
-            }
-        }
-
-
-        run(); // 每次打开/刷新页面时先调用一次
-        div.addEventListener('click', run); // 每次点击验证码的时候调用一次
-
-        // 提交按钮点击事件
-        function check() {
-            if (input.value.toLowerCase() == str.toLowerCase()) {
-                alert('验证成功');
-            } else {
-                alert('验证失败');
-                return ;
-            }
-            run();
-            input.value = '';
-            frm.submit();
-        }
-    </script>
+<!-- 引入js文件 -->
+<script type="text/javascript" src="js/vcode.js"></script>
 </html>
